# aiops

./: .gitignore  AGENTS.md  Dockerfile  README.md  aiops-triage-pipeline-architecture.excalidraw  docker-compose.yml  pyproject.toml  skills-lock.json
.github/: CODEOWNERS
_bmad/_config/: agent-manifest.csv  bmad-help.csv  files-manifest.csv  manifest.yaml  skill-manifest.csv  workflow-manifest.csv
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/input/: BMAD-READY-INPUT-v1.0.md  config.yaml
_bmad/tea/: config.yaml
artifact/: architecture-diagram-prototype.md  design-thinking-2026-04-07.md  project-context.md
config/: .env.dev  .env.docker  .env.local  .env.prod.template  .env.uat.template  denylist.yaml  otel-collector.yaml  prometheus-rules.yml  prometheus.yml  topology-registry.yaml
docs/: api-contracts.md  architecture-patterns.md  architecture.md  component-inventory.md  comprehensive-analysis-core.md  contracts.md  contribution-guide.md  data-models-core.md  data-models.md  deployment-guide.md  developer-onboarding.md  development-guide.md  index.md  local-development.md  project-overview.md  project-parts-metadata.md  project-structure.md  runtime-modes.md  schema-evolution-strategy.md  source-tree-analysis.md  technology-stack.md  user-provided-context.md
harness/: Dockerfile  main.py  metrics.py  requirements.txt
scripts/: bamd_auto.md  bamd_auto_continuous.md  bmad_sprint_runner.py  docker-precheck.sh  smoke-test.sh  validate-colors.sh  verify-e2e.sh
tests/: conftest.py
(+659 files in other folders)
