[project]
name = "aiops-triage-pipeline"
version = "0.1.0"
description = "AIOps triage pipeline"
readme = "README.md"
authors = [
    { name = "ssasvathan", email = "s.sasavathan@yahoo.com" }
]
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka==2.13.0",
    "SQLAlchemy==2.0.47",
    "pydantic==2.12.5",
    "redis==7.2.1",
    "boto3~=1.42",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-exporter-otlp==1.39.1",
    "langgraph==1.0.9",
    "pydantic-settings~=2.13.1",
    "psycopg[c]==3.3.3",
    "structlog==25.5.0",
]

[tool.uv]
dev-dependencies = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "testcontainers==4.14.1",
    "ruff~=0.15",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests requiring Docker",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
# N818: architecture-mandated exception names intentionally omit "Error" suffix
ignore = ["N818"]

[build-system]
requires = ["uv_build>=0.9.21"]
build-backend = "uv_build"
